<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sohage.example.com.movie.Activity.MainActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout

            android:id="@+id/activity_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/activity_vertical_margin"
            >

            <TextView
                android:id="@+id/PopularTxt"
                style="@style/Headers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/POPULAR"
                />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/popularMovies"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layoutDirection="ltr"/>

            <TextView
                android:id="@+id/TopRatedTxt"
                style="@style/Headers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/RATED"
                />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/TopRatedMovies"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layoutDirection="ltr"/>

            <TextView
                android:id="@+id/UpcomingTxt"
                style="@style/Headers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/UPCOMING"
                />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/UpcomingMovies"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layoutDirection="ltr"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
